--- a/app/views/notes-tool-3-0/action.html
+++ b/app/views/notes-tool-3-0/action.html
@@ -32,10 +32,15 @@
 				}
 			}) }}
 
+			{{govukButton({
+				text: "Add an audio file to transcribe",
+				classes: "govuk-button--secondary govuk-!-margin-bottom-8"
+			})}}
+			
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "significant-event"
+					href: "attachments"
 				})}}
 			</p>
 		</form>
