--- a/app/views/notes-tool-3-0/event-reason.html
+++ b/app/views/notes-tool-3-0/event-reason.html
@@ -21,7 +21,7 @@
 				id: "note-content",
 				label:
 				{
-					text: "What was the reason for this contact?",
+					text: "What was the reason for this event?",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
@@ -36,7 +36,7 @@ to discuss a joint visit" or "letter from Doctor Smith with psychiatric report r
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "other-family-present"
+					href: "detailed-notes"
 				})}}
 			</p>
 		</form>
