--- a/app/views/notes-tool-3-0/assessment-notes.html
+++ b/app/views/notes-tool-3-0/assessment-notes.html
@@ -12,12 +12,22 @@
 			{{data['case']['title'] or "Child A"}}
 		</h1>
 
+		<form method="post" action="create-written-note">
+			<p>
+				{{govukButton({
+					text: "Add an event",
+					classes: "govuk-button--secondary",
+					href: "event-type"
+				})}}
+			</p>
+		</form>
+		
 		<h2 class="govuk-heading-l">
-			Events
+			Events recorded so far
 		</h2>
 
-		{% if data['written-notes'].length %}
-		<table class="govuk-table">
+		{% if data['events'].length or data['show-events'] == 'true' %}
+		<!-- <table class="govuk-table">
 			<tbody class="govuk-table__body">
 				{% for note in data['written-notes'] %}
 				<tr class="govuk-table__row">
@@ -26,18 +36,57 @@
 				</tr>
 				{% endfor %}
 			</tbody>
-		</table>
+		</table> -->
+
+		<ol class="hmrc-timeline">
+			<li class="hmrc-timeline-event">
+				<h2 class="hmrc-timeline-event-title govuk-heading-m">
+					Home visit
+				</h2>
+				<span class="hmrc-timeline-event-meta govuk-body-s">
+					9 October 2020
+				</span>
+
+				<div class="hmrc-timeline-event-content">
+					<p>
+						Lorem ipsum nostrud in ut pariatur laborum elit consectetur laboris nulla in ut veniam irure non est pariatur.
+					</p>
+					<p>
+						<a href="#">View event</a>
+					</p>
+				</div>
+			</li>
+
+			<li class="hmrc-timeline-event">
+				<h2 class="hmrc-timeline-event-title govuk-heading-m">
+					Telephone call (in)
+				</h2>
+				<span class="hmrc-timeline-event-meta govuk-body-s">
+					24 July 2020
+				</span>
+
+				<div class="hmrc-timeline-event-content">
+					<p>
+						Lorem ipsum nostrud in ut pariatur laborum elit consectetur laboris nulla in ut veniam irure non est pariatur.
+					</p>
+					<p>
+						<a href="#">View event</a>
+					</p>
+				</div>
+			</li>
+		</ol>
 
 		{% else %}
 		<p>
 			You have not added any events yet.
 		</p>
 		{% endif %}
+
 		<form method="post" action="create-written-note">
 			<p>
 				{{govukButton({
 					text: "Add an event",
-					classes: "govuk-button--secondary",
+					classes: "govuk-button--secondary govuk-!-margin-top-8",
 					href: "event-type"
 				})}}
 			</p>
