--- a/app/views/notes-tool-3-0/detailed-notes.html
+++ b/app/views/notes-tool-3-0/detailed-notes.html
@@ -38,6 +38,11 @@
 				}
 			}) }}
 
+			{{govukButton({
+				text: "Add an audio file to transcribe",
+				classes: "govuk-button--secondary govuk-!-margin-bottom-8"
+			})}}
+
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
