--- a/app/views/notes-tool-3-0/event-date.html
+++ b/app/views/notes-tool-3-0/event-date.html
@@ -16,14 +16,35 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
+			{% set contactDateHtml %}
+
+			{{ govukDateInput({
+				id: "contact-date",
+				namePrefix: "contact-date",
+				fieldset:
+				{
+					legend:
+					{
+						text: "Enter a date",
+						isPageHeading: true,
+						classes: "govuk-fieldset__legend--s"
+					}
+				},
+				hint:
+				{
+					text: "For example, 12 11 2007"
+				}
+			}) }}
+			{% endset %}
+
 			{{ govukRadios({
-				idPrefix: "type-of-contact",
-				name: "type-of-contact",
+				idPrefix: "contact-date-type",
+				name: "contact-date-type",
 				fieldset: 
 				{
 					legend: 
 					{
-						text: "What was the event?",
+						text: "When was this event?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
@@ -34,28 +55,16 @@
 				},
 				items: [
 				{
-					value: "home-visit",
-					text: "Home visit"
+					value: "a",
+					text: "Today (" + now|formatDate('D MMMM YYYY') + ")"
 				},
 				{
-					value: "meeting",
-					text: "Meeting"
-				},
-				{
-					value: "telephone-out",
-					text: "Telephone call (out)"
-				},
-				{
-					value: "telephone-in",
-					text: "Telephone call (in)"
-				},
-				{
-					value: "letter-out",
-					text: "Letter (out)"
-				},
-				{
-					value: "letter-in",
-					text: "Letter (in)"
+					value: "b",
+					text: "Before today",
+					conditional: 
+					{
+						html: contactDateHtml
+					}
 				}
 				]
 			}) }}
@@ -63,7 +72,7 @@
 			<p>
 				{{govukButton({
 					text: "Save and continue",
-					href: "event-date"
+					href: "event-time"
 				})}}
 			</p>
 		</form>
