--- a/app/views/notes-tool-3-0/event-time.html
+++ b/app/views/notes-tool-3-0/event-time.html
@@ -20,7 +20,7 @@
 				<fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
 					<legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
 						<h1 class="govuk-fieldset__heading">
-							What time did this contact happen? (optional)
+							What time did this event happen? (optional)
 						</h1>
 					</legend>
 					<div id="dob-hint" class="govuk-hint">
@@ -53,7 +53,7 @@
 					<p>
 						{{govukButton({
 							text: "Save and continue",
-							href: "contact-reason"
+							href: "other-family-present"
 						})}}
 					</p>
 				</form>
