changes including time formatting

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,22 @@
 			Notes tool
 		</h3>
 		<h4 class="govuk-heading-s">
+			<a href="notes-tool-3-0">Version 3-0</a>
+			<span class="govuk-caption-m">12 February 2021</span>
+		</h4>
+		<p>
+			Timeline concept based on workshop to define MVS.
+		</p>
+
+		<h4 class="govuk-heading-s">
+			<a href="notes-tool-2-0">Version 2-0</a>
+			<span class="govuk-caption-m">25 January 2021</span>
+		</h4>
+		<p>
+			Some small changes to journey.
+		</p>
+
+		<h4 class="govuk-heading-s">
 			<a href="notes-tool-1-0">Version 1-0</a>
 			<span class="govuk-caption-m">20 January 2021</span>
 		</h4>
@@ -48,6 +64,7 @@
 				Example page for creating a written note
 			</li>
 		</ul>
+
 
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
