--- a/app/views/notes-tool-3-0/event-date.html
+++ b/app/views/notes-tool-3-0/event-date.html
@@ -19,8 +19,8 @@
 			{% set contactDateHtml %}
 
 			{{ govukDateInput({
-				id: "contact-date",
-				namePrefix: "contact-date",
+				id: "event-date",
+				namePrefix: "event-date",
 				fieldset:
 				{
 					legend:
