--- a/app/views/notes-tool-3-0/family-members.html
+++ b/app/views/notes-tool-3-0/family-members.html
@@ -20,13 +20,11 @@
 				Family members present
 			</h1>
 
+			{% for familyMember in data['family-members'] %}
 			<p>
-				Family member A
+				{{familyMember}}
 			</p>
-
-			<p>
-				Family member B
-			</p>
+			{% endfor %}
 
 			{{ govukRadios({
 				idPrefix: "add-more-family",
