--- a/app/views/notes-tool-3-0/file-upload-complete.html
+++ b/app/views/notes-tool-3-0/file-upload-complete.html
@@ -26,19 +26,11 @@ html: 'This service is being used for research only.'
 			}
 		}) }}
 
-		<p class="govuk-body">
-			You'll be able to access your uploaded files using a secure link, which we'll add to the finished case note.
-		</p>
-
 		<p class="govuk-body govuk-!-margin-top-6">
 			{{govukButton({
-				text: "Save and continue",
+				text: "Continue",
 				href: "check-your-answers"
 			})}}
-		</p>
-
-		<p class="govuk-body">
-			<a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
 		</p>
 	</div>
 </div>
