--- a/app/views/notes-tool-3-0/action.html
+++ b/app/views/notes-tool-3-0/action.html
@@ -17,8 +17,8 @@
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
 			{{ govukTextarea({
-				name: "note-content",
-				id: "note-content",
+				name: "actions",
+				id: "actions",
 				label:
 				{
 					text: "What actions are required? (optional)",
