--- a/app/views/notes-tool-3-0/check-your-answers.html
+++ b/app/views/notes-tool-3-0/check-your-answers.html
@@ -42,7 +42,7 @@
 				},
 				value:
 				{
-					text: "a"
+					text: data['type-of-event']
 				},
 				actions:
 				{
@@ -126,7 +126,7 @@
 				},
 				value:
 				{
-					html: familyMembers
+					text: data['detailed-notes']
 				},
 				actions:
 				{
@@ -147,7 +147,7 @@
 				},
 				value:
 				{
-					html: "a"
+					text: data['analysis']
 				},
 				actions:
 				{
@@ -168,7 +168,7 @@
 				},
 				value:
 				{
-					html: "a"
+					text: data['actions']
 				},
 				actions:
 				{
@@ -189,7 +189,7 @@
 				},
 				value:
 				{
-					html: "a"
+					html: ""
 				},
 				actions:
 				{
