--- a/app/views/notes-tool-3-0/detailed-notes.html
+++ b/app/views/notes-tool-3-0/detailed-notes.html
@@ -17,8 +17,8 @@
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
 			{{ govukTextarea({
-				name: "note-content",
-				id: "note-content",
+				name: "detailed-notes",
+				id: "detailed-notes",
 				label:
 				{
 					text: "Detailed notes (optional)",
