--- a/app/views/notes-tool-3-0/event-type.html
+++ b/app/views/notes-tool-3-0/event-type.html
@@ -17,8 +17,8 @@
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
 			{{ govukRadios({
-				idPrefix: "type-of-contact",
-				name: "type-of-contact",
+				idPrefix: "type-of-event",
+				name: "type-of-event",
 				fieldset: 
 				{
 					legend: 
