--- a/app/views/notes-tool-3-0/analysis-of-information.html
+++ b/app/views/notes-tool-3-0/analysis-of-information.html
@@ -17,8 +17,8 @@
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
 			{{ govukTextarea({
-				name: "note-content",
-				id: "note-content",
+				name: "analysis",
+				id: "analysis",
 				label:
 				{
 					text: "Your analysis (optional)",
