--- a/app/views/notes-tool-3-0/event-type.html
+++ b/app/views/notes-tool-3-0/event-type.html
@@ -34,27 +34,27 @@
 				},
 				items: [
 				{
-					value: "home-visit",
+					value: "Home visit",
 					text: "Home visit"
 				},
 				{
-					value: "meeting",
+					value: "Meeting",
 					text: "Meeting"
 				},
 				{
-					value: "telephone-out",
+					value: "Telephone call (out)",
 					text: "Telephone call (out)"
 				},
 				{
-					value: "telephone-in",
+					value: "Telephone call (in)",
 					text: "Telephone call (in)"
 				},
 				{
-					value: "letter-out",
+					value: "Letter (out)",
 					text: "Letter (out)"
 				},
 				{
-					value: "letter-in",
+					value: "Letter (in)",
 					text: "Letter (in)"
 				}
 				]
@@ -62,8 +62,7 @@
 
 			<p>
 				{{govukButton({
-					text: "Save and continue",
-					href: "event-date"
+					text: "Save and continue"
 				})}}
 			</p>
 		</form>
