--- a/app/views/notes-tool-3-0/new-media-file.html
+++ b/app/views/notes-tool-3-0/new-media-file.html
@@ -41,8 +41,7 @@
 
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
-					text: "Upload",
-					href: "file-upload-complete"
+					text: "Upload"
 				})}}
 			</p>
 		</form>
