--- a/app/views/notes-tool-3-0/check-your-answers.html
+++ b/app/views/notes-tool-3-0/check-your-answers.html
@@ -49,7 +49,7 @@
 					items: [
 					{
 						classes: "govuk-link--no-visited-state",
-						href: "start-date?cya=true",
+						href: "event-type?cya=true",
 						text: "Change",
 						visuallyHiddenText: "name"
 					}
