--- a/app/views/notes-tool-3-0/assessment-notes.html
+++ b/app/views/notes-tool-3-0/assessment-notes.html
@@ -26,6 +26,8 @@
 		</form>
 		{% endif %}
 		
+		<!-- {{data['events'] | dump}} -->
+
 		<h2 class="govuk-heading-l">
 			Events recorded so far
 		</h2>
@@ -45,7 +47,7 @@
 						Lorem ipsum nostrud in ut pariatur laborum elit consectetur laboris nulla in ut veniam irure non est pariatur.
 					</p>
 					<p>
-						<a href="#">View event</a>
+						<a href="event">View event</a>
 					</p>
 				</div>
 			</li>
