basic event object management

--- a/app/views/notes-tool-3-0/add-family-member.html
+++ b/app/views/notes-tool-3-0/add-family-member.html
@@ -24,7 +24,7 @@
 				{
 					legend: 
 					{
-						text: "Select all family members who were present",
+						text: "Select all family members involved in this event",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
