--- a/app/views/notes-tool-3-0/family-members.html
+++ b/app/views/notes-tool-3-0/family-members.html
@@ -33,7 +33,7 @@
 				{
 					legend: 
 					{
-						text: "Were any other family members present?",
+						text: "Do you need to include other family members?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--l govuk-!-margin-top-8"
 					}
