--- a/app/views/notes-tool-3-0/event-date.html
+++ b/app/views/notes-tool-3-0/event-date.html
@@ -16,6 +16,8 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
+			{{data['id']}}
+			
 			{% set contactDateHtml %}
 
 			{{ govukDateInput({
