--- a/app/views/notes-tool-3-0/analysis-of-information.html
+++ b/app/views/notes-tool-3-0/analysis-of-information.html
@@ -39,8 +39,7 @@
 
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
-					text: "Save and continue",
-					href: "action"
+					text: "Save and continue"
 				})}}
 			</p>
 		</form>
