--- a/app/views/notes-tool-3-0/detailed-notes.html
+++ b/app/views/notes-tool-3-0/detailed-notes.html
@@ -45,8 +45,7 @@
 
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
-					text: "Save and continue",
-					href: "analysis-of-information"
+					text: "Save and continue"
 				})}}
 			</p>
 		</form>
