--- a/app/views/notes-tool-3-0/other-family-present.html
+++ b/app/views/notes-tool-3-0/other-family-present.html
@@ -23,7 +23,7 @@
 				{
 					legend: 
 					{
-						text: "Were any other family members present?",
+						text: "Do you need to add family members to this event?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
