--- a/app/views/notes-tool-3-0/assessment-notes.html
+++ b/app/views/notes-tool-3-0/assessment-notes.html
@@ -39,7 +39,7 @@
 					{{event.type}}
 				</h2>
 				<span class="hmrc-timeline-event-meta govuk-body-s">
-					{{event.datetime|formatDate('h:mma, DD MMMM YYYY')}}
+					{{event.datetime|formatDate('h:mma, D MMMM YYYY')}}
 				</span>
 
 				<div class="hmrc-timeline-event-content">
