--- a/app/views/notes-tool-3-0/check-your-answers.html
+++ b/app/views/notes-tool-3-0/check-your-answers.html
@@ -214,12 +214,13 @@
 			If you've added all the information you need to, you should confirm and save the event to the case for '{{data['child'] or 'Child A'}}'.
 		</p>
 
-		<p>
-			{{govukButton({
-				text: "Confirm and save event",
-				href: "confirmation-page"
-			})}}
-		</p>
+		<form method="post">
+			<p>
+				{{govukButton({
+					text: "Confirm and save event"
+				})}}
+			</p>
+		</form>
 	</div>
 </div>
 {% endblock %}
