--- a/app/views/notes-tool-3-0/family-members.html
+++ b/app/views/notes-tool-3-0/family-members.html
@@ -33,7 +33,7 @@
 				{
 					legend: 
 					{
-						text: "Do you need to include other family members?",
+						text: "Have you finished adding family members?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--l govuk-!-margin-top-8"
 					}
@@ -49,7 +49,7 @@
 				},
 				{
 					value: "no",
-					text: "No"
+					text: "No, I need to add more"
 				}
 				]
 			}) }}
