--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,5 +18,6 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/cookie-banner";
 @import "patterns/hmcts-timeline";
 @import "patterns/hmrc-timeline";
+@import "components/hmcts-search";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
