--- a/app/views/notes-tool-3-0/event-type.html
+++ b/app/views/notes-tool-3-0/event-type.html
@@ -48,27 +48,51 @@
 				items: [
 				{
 					value: "Home visit",
-					text: "Home visit"
+					text: "Home visit",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "Meeting",
-					text: "Meeting"
+					text: "Meeting",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "Telephone call (out)",
-					text: "Telephone call (out)"
+					text: "Telephone call (out)",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "Telephone call (in)",
-					text: "Telephone call (in)"
+					text: "Telephone call (in)",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "Letter (out)",
-					text: "Letter (out)"
+					text: "Letter (out)",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "Letter (in)",
-					text: "Letter (in)"
+					text: "Letter (in)",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "Other",
@@ -76,6 +100,10 @@
 					conditional:
 					{
 						html: otherInput
+					},
+					attributes:
+					{
+						required: "required"
 					}
 				}
 				]
