--- a/app/views/notes-tool-3-0/other-family-present.html
+++ b/app/views/notes-tool-3-0/other-family-present.html
@@ -35,11 +35,19 @@
 				items: [
 				{
 					value: "yes",
-					text: "Yes"
+					text: "Yes",
+					attributes:
+					{
+						required: "required"
+					}
 				},
 				{
 					value: "no",
-					text: "No"
+					text: "No",
+					attributes:
+					{
+						required: "required"
+					}
 				}
 				]
 			}) }}
