--- a/app/views/notes-tool-3-0/confirmation-page.html
+++ b/app/views/notes-tool-3-0/confirmation-page.html
@@ -6,12 +6,7 @@ GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-{{ govukPhaseBanner({
-	tag: {
-	text: "experimental"
-},
-html: 'This service is being used for research only.'
-}) }}
+{% include './includes/phase-banner--alpha.html' %}
 {% endblock %}
 
 {% block content %}
