added the search

--- a/app/views/notes-tool-3-0/assessment-notes.html
+++ b/app/views/notes-tool-3-0/assessment-notes.html
@@ -15,7 +15,7 @@
 			</span>
 		</h1>
 		
-		<!-- <div class="hmcts-search govuk-!-margin-bottom-8">
+		<div class="hmcts-search govuk-!-margin-bottom-8">
 			<form action="" method="get">
 				<div class="govuk-form-group">
 					<label class="govuk-label hmcts-search__label govuk-label--m" for="bill">
@@ -33,7 +33,7 @@
 					Search
 				</button>
 			</form>
-		</div> -->
+		</div>
 
 		
 
