--- a/app/views/notes-tool-3-0/start.html
+++ b/app/views/notes-tool-3-0/start.html
@@ -14,7 +14,7 @@
 		</h1>
 
 		<p class="govuk-body-l">
-			Social workers can use this service to securely record notes about a social work assesssment.
+			Social workers can use this service to securely record notes about a social work assessment.
 		</p>
 
 		<p>
